refactor: Remove sessionId from JobSpec and JobStoreTest